[gd_scene load_steps=6 format=3 uid="uid://bon1h81u3xrn0"]

[ext_resource type="Script" uid="uid://cvfcvqyj14os4" path="res://player/player.gd" id="1_xhfnw"]
[ext_resource type="Texture2D" uid="uid://b3ccdr3ntevun" path="res://sprites/gptwitch2.png" id="2_kpjcp"]
[ext_resource type="Texture2D" uid="uid://bx83bpko5lk77" path="res://sprites/cgptwitchfacingaway.png" id="3_e80uo"]
[ext_resource type="Texture2D" uid="uid://bom4ib7hchcpg" path="res://sprites/cgpt_witch_facing_forward.png" id="4_e80uo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kpjcp"]
size = Vector2(43, 72)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_xhfnw")

[node name="SideSprite" type="Sprite2D" parent="."]
scale = Vector2(0.125, 0.125)
texture = ExtResource("2_kpjcp")

[node name="BackSprite" type="Sprite2D" parent="."]
scale = Vector2(0.125, 0.125)
texture = ExtResource("3_e80uo")

[node name="FrontSprite" type="Sprite2D" parent="."]
scale = Vector2(0.125, 0.125)
texture = ExtResource("4_e80uo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3.5, 16)
shape = SubResource("RectangleShape2D_kpjcp")
